Changes to be committed: 	modified:   .gitignore 	new file:   group_task2/report/acc.png 	new file:   group_task2/report/fine.png 	new file:   group_task2/report/loss.png 	new file:   group_task2/report/report_mid.pdf 	new file:   group_task2/report/report_mid.synctex.gz 	new file:   group_task2/report/report_mid.tex 	modified:   group_task2/task1_finetuning/__pycache__/data_loading_preprocessing.cpython-39.pyc 	modified:   group_task2/task1_finetuning/__pycache__/training_fine_tuning.cpython-39.pyc 	modified:   group_task2/task1_finetuning/data_loading_preprocessing.py 	new file:   group_task2/task1_finetuning/fine_tuning_notes.txt 	deleted:    group_task2/task1_finetuning/main.py 	modified:   group_task2/task1_finetuning/main_notebook.ipynb 	new file:   group_task2/task1_finetuning/model_pretrained_state_dict.pth 	new file:   group_task2/task1_finetuning/model_random_state_dict.pth 	deleted:    group_task2/task1_finetuning/runs/pretrained_model/events.out.tfevents.1715236007.HeDesertFox_pc.9136.0 	deleted:    group_task2/task1_finetuning/runs/random_init_model/events.out.tfevents.1715236007.HeDesertFox_pc.9136.1 	modified:   group_task2/task1_finetuning/training_fine_tuning.py

--- a/group_task2/task1_finetuning/main_notebook.ipynb
+++ b/group_task2/task1_finetuning/main_notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 项目主函数"
+    "## 微调任务主函数"
    ]
   },
   {
@@ -37,7 +37,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 设置设备"
+    "# 设置设备\n",
+    "尽可能选择GPU进行训练"
    ]
   },
   {
@@ -54,7 +55,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 数据加载"
+    "# 数据加载\n",
+    "下载数据（如果数据已存在则不重复下载），生成批量数据"
    ]
   },
   {
@@ -83,30 +85,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 超参数列表"
+    "# 超参数调优\n",
+    "对学习率和训练轮数进行调参（其它参数如动量和权重衰退是定值）\n",
+    "\n",
+    "如果不想调参，可以直接进行数据可视化，那边提供了直接输入超参数的代码块\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 超参数列表\n",
-    "lr_list = [0.001]\n",
-    "num_epochs_list = [10]"
+    "lr_list = [0.5e-2, 1e-2, 2e-2]\n",
+    "num_epochs_list = [20]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 对预训练模型进行超参数调优"
+    "对预训练模型进行超参数调优"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,20 +119,17 @@
      "output_type": "stream",
      "text": [
       "Tuning hyperparameters for pretrained model...\n",
-      "Training with lr=0.001, num_epochs=10\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m model, _ \u001b[38;5;241m=\u001b[39m initialize_model(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mresnet\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m200\u001b[39m, use_pretrained\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      4\u001b[0m model \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m----> 5\u001b[0m best_params_pretrained \u001b[38;5;241m=\u001b[39m \u001b[43mhyperparameter_tuning\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataloaders\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlr_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43muse_pretrained\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBest hyperparameters for pretrained model: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mbest_params_pretrained\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\桌面文件\\复旦\\学在复旦\\大四下\\神经网络与深度学习\\Neural-Networks-and-Deep-Learning-Homework-Group-Tasks\\group_task2\\task1_finetuning\\training_fine_tuning.py:92\u001b[0m, in \u001b[0;36mhyperparameter_tuning\u001b[1;34m(model, dataloaders, device, num_epochs_list, lr_list, use_pretrained)\u001b[0m\n\u001b[0;32m     89\u001b[0m     optimizer \u001b[38;5;241m=\u001b[39m optim\u001b[38;5;241m.\u001b[39mSGD(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39mlr, momentum\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.9\u001b[39m)\n\u001b[0;32m     91\u001b[0m model_copy \u001b[38;5;241m=\u001b[39m deepcopy(model)\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m---> 92\u001b[0m trained_model \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_copy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataloaders\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcriterion\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     93\u001b[0m trained_model\u001b[38;5;241m.\u001b[39meval()\n\u001b[0;32m     95\u001b[0m val_corrects \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
-      "File \u001b[1;32mc:\\桌面文件\\复旦\\学在复旦\\大四下\\神经网络与深度学习\\Neural-Networks-and-Deep-Learning-Homework-Group-Tasks\\group_task2\\task1_finetuning\\training_fine_tuning.py:34\u001b[0m, in \u001b[0;36mtrain_model\u001b[1;34m(model, dataloaders, device, criterion, optimizer, num_epochs, writer)\u001b[0m\n\u001b[0;32m     31\u001b[0m total_samples \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m     33\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m inputs, labels \u001b[38;5;129;01min\u001b[39;00m dataloaders[phase]:\n\u001b[1;32m---> 34\u001b[0m     inputs \u001b[38;5;241m=\u001b[39m \u001b[43minputs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     35\u001b[0m     labels \u001b[38;5;241m=\u001b[39m labels\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[0;32m     36\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Training with lr=0.005, num_epochs=20\n",
+      "Final validation accuracy: 0.7164\n",
+      "New best accuracy: 0.7164 with lr=0.005 and num_epochs=20\n",
+      "Training with lr=0.01, num_epochs=20\n",
+      "Final validation accuracy: 0.7245\n",
+      "New best accuracy: 0.7245 with lr=0.01 and num_epochs=20\n",
+      "Training with lr=0.02, num_epochs=20\n",
+      "Final validation accuracy: 0.7370\n",
+      "New best accuracy: 0.7370 with lr=0.02 and num_epochs=20\n",
+      "Best Params: lr=0.02, num_epochs=20, Accuracy=0.7370\n",
+      "Best hyperparameters for pretrained model: {'lr': 0.02, 'num_epochs': 20, 'accuracy': tensor(0.7370, device='cuda:0', dtype=torch.float64)}\n"
      ]
     }
    ],
@@ -144,7 +146,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 对随机初始化模型进行超参数调优"
+    "对随机初始化模型进行超参数调优\n",
+    "\n",
+    "也可以不调优，直接使用预训练模型的最优参数（一定意义上更公平）"
    ]
   },
   {
@@ -165,12 +169,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 可视化"
+    "# Tensorboard 可视化"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,19 +184,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 此代码是用来跳过调参，直接运行的！\n",
-    "best_params_pretrained = {'lr': 0.001, 'num_epochs': 10}\n",
-    "best_params_random = {'lr': 0.001, 'num_epochs': 10}"
+    "如果不想重新调参，可以手动在下面输入最优参数"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 此代码是用来跳过调参，直接运行的！\n",
+    "best_params_pretrained = {'lr': 0.02, 'num_epochs': 20}\n",
+    "best_params_random = {'lr': 0.02, 'num_epochs': 20}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "重新训练预训练模型，用Tensorboard可视化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,20 +220,46 @@
     "\n",
     "# 设置不同的学习率\n",
     "optimizer_pretrained = optim.SGD([\n",
-    "    {'params': model_pretrained.fc.parameters(), 'lr': best_params_pretrained['lr'] * 10},  # 最后一层\n",
-    "    {'params': (p for n, p in model_pretrained.named_parameters() if 'fc' not in n), 'lr': best_params_pretrained['lr']}  # 其他所有层\n",
-    "], momentum=0.9)\n",
+    "    {'params': model_pretrained.fc.parameters(), 'lr': best_params_pretrained['lr']},  # 最后一层\n",
+    "    {'params': (p for n, p in model_pretrained.named_parameters() if 'fc' not in n), 'lr': best_params_pretrained['lr'] / 10}  # 其他所有层\n",
+    "], momentum=0.9, weight_decay=1e-3)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "trained_model_pretrained = train_model(\n",
     "    model_pretrained, dataloaders, device, criterion, optimizer_pretrained, num_epochs=best_params_pretrained['num_epochs'], writer=writer_pretrained\n",
     ")\n",
-    "writer_pretrained.close()  # 关闭TensorBoard writer"
+    "writer_pretrained.close()  # 关闭TensorBoard writer\n",
+    "\n",
+    "# 保存模型的状态字典\n",
+    "torch.save(trained_model_pretrained.state_dict(), 'model_pretrained_state_dict.pth')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 可以在这里直接导入模型的状态字典，而不是重新训练，可以更方便地进行进一步操作\n",
+    "# # 初始化模型\n",
+    "# trained_model_pretrained, _ = initialize_model(\"resnet\", 200, use_pretrained=True)\n",
+    "# trained_model_pretrained = trained_model_pretrained.to(device)\n",
+    "\n",
+    "# # 加载模型参数\n",
+    "# trained_model_pretrained.load_state_dict(torch.load('model_pretrained_state_dict.pth'))\n",
+    "# trained_model_pretrained.eval()  # 设置为评估模式"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "重新训练随机初始化模型，用Tensorboard可视化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,13 +268,32 @@
     "model_random = model_random.to(device)\n",
     "\n",
     "# 设置优化器\n",
-    "optimizer_random = optim.SGD(model_random.parameters(), lr=best_params_random['lr'], momentum=0.9)\n",
+    "optimizer_random = optim.SGD(model_random.parameters(), lr=best_params_random['lr'], momentum=0.9, weight_decay=1e-3)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "trained_model_random = train_model(\n",
     "    model_random, dataloaders, device, criterion, optimizer_random, num_epochs=best_params_random['num_epochs'], writer=writer_random\n",
     ")\n",
-    "writer_random.close()  # 关闭TensorBoard writer"
+    "writer_random.close()  # 关闭TensorBoard writer\n",
+    "\n",
+    "# 保存模型的状态字典\n",
+    "torch.save(trained_model_random.state_dict(), 'model_random_state_dict.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 可以在这里直接导入模型的状态字典，而不是重新训练，可以更方便地进行进一步操作\n",
+    "# # 初始化模型\n",
+    "# trained_model_random, _ = initialize_model(\"resnet\", 200, use_pretrained=False)\n",
+    "# trained_model_random = trained_model_random.to(device)\n",
+    "\n",
+    "# # 加载模型参数\n",
+    "# trained_model_random.load_state_dict(torch.load('model_random_state_dict.pth'))\n",
+    "# trained_model_random.eval()  # 设置为评估模式"
    ]
   }
  ],
