Changes to be committed: 	modified:   group_task2/report/report_mid.pdf 	modified:   group_task2/report/report_mid.synctex.gz 	modified:   group_task2/report/report_mid.tex

--- a/group_task2/report/report_mid.tex
+++ b/group_task2/report/report_mid.tex
@@ -96,7 +96,7 @@
 
      详见其中的文件夹\texttt{group\_task2}。其中包含微调任务\texttt{task1\_finetuning}和目标检测任务\texttt{task2\_object\_detection}。
 
-     训练好的模型权重详见：\\
+     本项目提供了训练好的模型，详见\texttt{task1\_finetuning}中的\texttt{model\_pretrained\_state\_dict.pth}和\texttt{model\_random\_state\_dict.pth}文件，以及\texttt{task2\_object\_detection}中的。。。文件。也可以点击以下网盘链接：。。。\\
 
 
 
